src/parser.output
Terminals unused in grammar

   TEQUAL
   '='
   '-'
   '+'
   '*'
   '/'
   NEG


State 9 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | expr

    3 ident: TIDENTIFIER

    4 number: TNUMBER

    5 expr: expr TPLUS expr
    6     | number
    7     | ident


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
'=' (61)
error (256)
TIDENTIFIER (258) 3
TNUMBER (259) 4
TEQUAL (260)
TPLUS (261) 5
NEG (262)


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
program (14)
    on left: 1 2, on right: 0
ident (15)
    on left: 3, on right: 7
number (16)
    on left: 4, on right: 6
expr (17)
    on left: 5 6 7, on right: 2 5


State 0

    0 $accept: . program $end

    TIDENTIFIER  shift, and go to state 1
    TNUMBER      shift, and go to state 2

    $default  reduce using rule 1 (program)

    program  go to state 3
    ident    go to state 4
    number   go to state 5
    expr     go to state 6


State 1

    3 ident: TIDENTIFIER .

    $default  reduce using rule 3 (ident)


State 2

    4 number: TNUMBER .

    $default  reduce using rule 4 (number)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    7 expr: ident .

    $default  reduce using rule 7 (expr)


State 5

    6 expr: number .

    $default  reduce using rule 6 (expr)


State 6

    2 program: expr .
    5 expr: expr . TPLUS expr

    TPLUS  shift, and go to state 8

    $default  reduce using rule 2 (program)


State 7

    0 $accept: program $end .

    $default  accept


State 8

    5 expr: expr TPLUS . expr

    TIDENTIFIER  shift, and go to state 1
    TNUMBER      shift, and go to state 2

    ident   go to state 4
    number  go to state 5
    expr    go to state 9


State 9

    5 expr: expr . TPLUS expr
    5     | expr TPLUS expr .

    TPLUS  shift, and go to state 8

    TPLUS     [reduce using rule 5 (expr)]
    $default  reduce using rule 5 (expr)
